BP-26 (task-2): make distributedlog modules be able to be built in bookkeeper repo
Descriptions of the changes in this PR:

This is the second sub-task of #1024. This change is based on [BP-26/distributedlog_merge](https://github.com/apache/bookkeeper/tree/BP-26/distributedlog_merge) branch (created at #1068).

This change includes:

- move the findbugs.xml and checkstyle/suppression.xml from distributedlog-build-tools to bookkeeper buildtools module.
- mockito: dlog is using mockito 1 while bk is using mockito 2. this change make dlog modules use the mockito dependencies defined at root pom.xml.
- change the description from "Apache DistributedLog" to "Apache BookKeeper :: DistributedLog".
- change the versions from `0.6.0-SNAPSHOT` to `4.7.0-SNAPSHOT`.
- fix the compilation issues with current latest bk

This PR *DOESNT* change the group id of distributedlog modules. They will remain using "org.apache.distributedlog" as the group id.

Author: Sijie Guo <sijie@apache.org>

Reviewers: Enrico Olivelli <eolivelli@gmail.com>, Jia Zhai <None>, Yiming Zang <yzang2016@gmail.com>

This closes #1069 from sijie/compile_distributedlog

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
     <module>tests</module>
     <module>bookkeeper-dist</module>
     <module>microbenchmarks</module>
+    <module>stream/distributedlog</module>
   </modules>
   <mailingLists>
     <mailingList>
@@ -110,7 +111,7 @@
     <jmh.version>1.19</jmh.version>
     <junit.version>4.12</junit.version>
     <lombok.version>1.16.18</lombok.version>
-    <mockito-core.version>2.13.0</mockito-core.version>
+    <mockito.version>2.13.0</mockito.version>
     <netty.version>4.1.12.Final</netty.version>
     <netty-boringssl.version>2.0.3.Final</netty-boringssl.version>
     <powermock.version>2.0.0-beta.5</powermock.version>
@@ -181,7 +182,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>${mockito-core.version}</version>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
