--- a/tests/shaded/bookkeeper-server-tests-shaded-test/pom.xml
+++ b/tests/shaded/bookkeeper-server-tests-shaded-test/pom.xml
@@ -19,8 +19,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.bookkeeper.tests</groupId>
-    <artifactId>tests-parent</artifactId>
+    <groupId>org.apache.bookkeeper.tests.shaded</groupId>
+    <artifactId>shaded-tests-parent</artifactId>
     <version>4.7.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
