--- a/tests/shaded/pom.xml
+++ b/tests/shaded/pom.xml
@@ -20,16 +20,17 @@
   <packaging>pom</packaging>
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.bookkeeper</groupId>
-    <artifactId>bookkeeper</artifactId>
+    <groupId>org.apache.bookkeeper.tests</groupId>
+    <artifactId>tests-parent</artifactId>
     <version>4.7.0-SNAPSHOT</version>
+    <relativePath>..</relativePath>
   </parent>
-  <groupId>org.apache.bookkeeper</groupId>
-  <artifactId>shaded-parent</artifactId>
-  <name>Apache BookKeeper :: Shaded :: Parent</name>
+  <groupId>org.apache.bookkeeper.tests.shaded</groupId>
+  <artifactId>shaded-tests-parent</artifactId>
+  <name>Apache BookKeeper :: Tests :: Test Shaded Jars</name>
   <modules>
-    <module>bookkeeper-server-shaded</module>
-    <module>bookkeeper-server-tests-shaded</module>
-    <module>distributedlog-core-shaded</module>
+    <module>bookkeeper-server-shaded-test</module>
+    <module>bookkeeper-server-tests-shaded-test</module>
+    <module>distributedlog-core-shaded-test</module>
   </modules>
 </project>
