--- a/.travis.yml
+++ b/.travis.yml
@@ -46,11 +46,11 @@ before_install:
     fi
     if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then
         export DLOG_MODIFIED="true"  
-        echo "Enable testing distributedlog modules since if they are not pull requests."
+        echo "Enable testing distributedlog modules since they are not pull requests."
     else
         if [ `git diff --name-only $TRAVIS_COMMIT_RANGE | grep "^stream\/distributedlog" | wc -l` -gt 0 ]; then
             export DLOG_MODIFIED="true"  
-            echo "Enable testing distributedlog modules since if they are not pull requests."
+            echo "Enable testing distributedlog modules if this pull request modifies files under directory `stream/distributedlog`."
         fi
     fi
 
