add code coverage reported module see http://www.lorenzobettini.it/2017/02/jacoco-code-coverage-and-report-of-multiple-eclipse-plug-in-projects/

--- a/pom.xml
+++ b/pom.xml
@@ -383,6 +383,9 @@
     </profile>
     <profile>
         <id>code-coverage</id>
+        <modules>
+          <module>codecoverage</module>
+        </modules>
         <build>
           <plugins>
               <plugin>
