--- a/tests/docker-images/all-versions-image/pom.xml
+++ b/tests/docker-images/all-versions-image/pom.xml
@@ -19,18 +19,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.apache.bookkeeper.tests</groupId>
-    <artifactId>all-versions-image</artifactId>
+    <artifactId>docker-images</artifactId>
     <version>4.7.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.bookkeeper.tests</groupId>
-  <artifactId>docker-latest-version-image</artifactId>
-  <name>Apache BookKeeper :: Tests :: Docker All Versions Image :: Latest version</name>
+  <artifactId>all-versions-image</artifactId>
+  <name>Apache BookKeeper :: Tests :: Docker Images :: All Versions</name>
   <packaging>pom</packaging>
   <dependencies>
     <dependency>
       <groupId>org.apache.bookkeeper.tests</groupId>
-      <artifactId>docker-all-released-versions-image</artifactId>
+      <artifactId>all-released-versions-image</artifactId>
       <version>${project.parent.version}</version>
       <type>pom</type>
     </dependency>
