--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -29,7 +29,7 @@
   <name>Apache BookKeeper :: Tests</name>
   <modules>
     <module>shaded</module>
-    <module>docker-all-versions-image</module>
+    <module>docker-images</module>
     <module>integration-tests-base</module>
     <module>integration-tests-base-groovy</module>
     <module>integration-tests-utils</module>
