--- a/tests/integration/pom.xml
+++ b/tests/integration/pom.xml
@@ -20,33 +20,15 @@
   <packaging>pom</packaging>
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.bookkeeper</groupId>
-    <artifactId>bookkeeper</artifactId>
+    <groupId>org.apache.bookkeeper.tests</groupId>
+    <artifactId>integration-tests-base</artifactId>
     <version>4.7.0-SNAPSHOT</version>
+    <relativePath>../integration-tests-base</relativePath>
   </parent>
-  <groupId>org.apache.bookkeeper.tests</groupId>
+  <groupId>org.apache.bookkeeper.tests.integration</groupId>
   <artifactId>tests-parent</artifactId>
-  <name>Apache BookKeeper :: Tests</name>
+  <name>Apache BookKeeper :: Tests :: Integration</name>
   <modules>
-    <module>shaded</module>
-    <module>docker-images</module>
-    <module>integration-tests-base</module>
-    <module>integration-tests-base-groovy</module>
-    <module>integration-tests-utils</module>
-    <module>integration-tests-topologies</module>
-    <module>backward-compat</module>
-    <module>integration</module>
+    <module>smoke</module>
   </modules>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>${maven-deploy-plugin.version}</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
