--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,10 @@ before_install:
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
         jdk_switcher use "$CUSTOM_JDK";
     fi
+    echo "TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST}"
     if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
         export DLOG_MODIFIED="true"  
-        echo "Enable testing distributedlog modules since they are not pull requests: TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST}"
+        echo "Enable testing distributedlog modules since they are not pull requests"
     else
         if [ `git diff --name-only $TRAVIS_COMMIT_RANGE | grep "^stream\/distributedlog" | wc -l` -gt 0 ]; then
             export DLOG_MODIFIED="true"  
