--- a/tests/integration-tests-base-groovy/pom.xml
+++ b/tests/integration-tests-base-groovy/pom.xml
@@ -89,6 +89,7 @@
              https://issues.apache.org/jira/browse/SUREFIRE-1476 //-->
         <version>2.8.1</version>
         <configuration>
+          <argLine>-Xmx4G -Djava.net.preferIPv4Stack=true</argLine>
           <forkCount>1</forkCount>
           <useSystemClassLoader>false</useSystemClassLoader>
           <systemPropertyVariables>
