--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.libdir>${basedir}/lib</project.libdir>
     <!-- dependencies -->
-    <bookkeeper.version>4.6.0</bookkeeper.version>
+    <bookkeeper.version>4.7.0-SNAPSHOT</bookkeeper.version>
     <commons-lang3.version>3.3.2</commons-lang3.version>
-    <distributedlog.version>0.5.0</distributedlog.version>
+    <distributedlog.version>4.7.0-SNAPSHOT</distributedlog.version>
     <grpc.version>1.5.0</grpc.version>
     <guava.version>21.0</guava.version>
     <helix-core.version>0.6.7</helix-core.version>
