--- a/tests/backward-compat/yahoo-custom-version/pom.xml
+++ b/tests/backward-compat/yahoo-custom-version/pom.xml
@@ -15,27 +15,21 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="
+  http://maven.apache.org/POM/4.0.0
+  http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.bookkeeper.tests</groupId>
-    <artifactId>integration-tests-base-groovy</artifactId>
+    <groupId>org.apache.bookkeeper.tests.backward-compat</groupId>
+    <artifactId>tests-parent</artifactId>
     <version>4.7.0-SNAPSHOT</version>
-    <relativePath>../integration-tests-base-groovy</relativePath>
   </parent>
+
   <groupId>org.apache.bookkeeper.tests.backward-compat</groupId>
-  <artifactId>tests-parent</artifactId>
-  <name>Apache BookKeeper :: Tests :: Backward Compatibility</name>
-  <modules>
-    <module>upgrade</module>
-    <module>upgrade-direct</module>
-    <module>hierarchical-ledger-manager</module>
-    <module>hostname-bookieid</module>
-    <module>recovery-no-password</module>
-    <module>old-cookie-new-cluster</module>
-    <module>current-server-old-clients</module>
-    <module>yahoo-custom-version</module>
-  </modules>
+  <artifactId>yahoo-custom-version</artifactId>
+  <packaging>jar</packaging>
+  <name>Apache BookKeeper :: Tests :: Backward Compatibility :: Test upgrade between yahoo custom version and current</name>
+
 </project>
