Disable tests reruns on dev profile
Sometimes you don't want the rerun because you _want_ to see the flake.

Author: Ivan Kelly <ivank@apache.org>

Reviewers: Enrico Olivelli <eolivelli@gmail.com>

This closes #1149 from ivankelly/dev-rerun

--- a/pom.xml
+++ b/pom.xml
@@ -450,6 +450,7 @@
               <reuseForks>false</reuseForks>
               <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
               <trimStackTrace>false</trimStackTrace>
+              <rerunFailingTestsCount>0</rerunFailingTestsCount>
             </configuration>
           </plugin>
         </plugins>
