Upgrade JaCoCo and fix code coverage build system
- Upgrade JaCoCo to version 0.8.0 which supports Java 9
- Exclude generated sources from the NAR-plugin files
- Update surefire configuration in order to not fail the build while using -Pcode-coverage

Author: Enrico Olivelli <eolivelli@apache.org>
Author: eolivelli <eolivelli@apache.org>

Reviewers: Sijie Guo <sijie@apache.org>

This closes #1129 from eolivelli/code-coverage-2

--- a/pom.xml
+++ b/pom.xml
@@ -412,12 +412,14 @@
 	          <redirectTestOutputToFile>true</redirectTestOutputToFile>
 	          <reuseForks>false</reuseForks>
 	          <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
+                  <!-- we want build to complete even in case of failures -->
+                  <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
              </plugin>
              <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
-               <version>0.7.9</version>
+               <version>0.8.0</version>
                <executions>
                  <execution>
                    <goals>
