Issue 1147: Move bookkeeper-server/{bin,conf} to root module
*Motivation*

since 4.7, we are shipping the binary distribution using bookkeeper-dist modules. so it is making more sense to have {bin,conf} directory at root module,
rather than bookkeeper-server module.

*Solution*

- move bookkeeper-server/bin to bin
- move bookkeeper-server/conf to conf
- update the new bookkeeper cli related files as "experimental"

This change is needed for integrating with dlog scripts for BP-26 and new bookkeeper cli for BP-27.

--- a/conf/log4j.cli.properties
+++ b/conf/log4j.cli.properties
@@ -20,7 +20,8 @@
 #
 
 #
-# BookKeeper CLI configuration
+# BookKeeper CLI (experimental) log4j configuration (used by `bin/bookkeeper-cli.sh`)
+#
 
 # DEFAULT: console appender only
 # Define some default values that can be overridden by system properties
