--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -19,6 +19,10 @@
 #
 #
 
+#
+# BookKeeper Daemon log4j configuration
+#
+
 # Format is "<default threshold> (, <appender>)+
 
 # DEFAULT: console appender only
