--- a/conf/log4j.shell.properties
+++ b/conf/log4j.shell.properties
@@ -20,7 +20,8 @@
 #
 
 #
-# BookieShell configuration
+# BookieShell log4j configuration
+#
 
 # DEFAULT: console appender only
 # Define some default values that can be overridden by system properties
